2007-01-04 dev-zero at gentoo dot org 

	* swig/geos.i: use unsigned int when CAPI signatures
	  expect unsigned int (not size_t).

2007-01-03 Sandro Santilli <strk@refractions.net>

	* tests/xmltester/: fme.xml, Makefile.am: added buffer testcase.
	* tests/xmltester/XMLTester.cpp: use a tolerance of 10E-6
	  for buffer validation (~10cm at worst when using latlong
	  projections); create sql tables with oid to work around a
	  bug in qgis 0.7.4.

2007-01-03 Mark Cave-Ayland <mark.cave-ayland@ilande.co.uk>

	* source/inlines.cpp, source/algorithm/HCoordinate.cpp:
	  Fixes for MingW builds. See geos-devel/2007-January/002766.html.

2007-01-03 Sandro Santilli <strk@refractions.net>

	* source/operation/buffer/BufferOp.cpp (bufferReducedPrecision):
	  Fixed computation of reduced PrecisionModel scale.

2006-12-18 Sandro Santilli <strk@refractions.net>

	* tests/xmltester/robustness.xml: added
	  testcase reported to fail with 2.2.3 on
	  postgis-users/2006-November/014013.html.
	* source/precision/GeometrySnapper.cpp,
	  source/headers/geos/geom/BinaryOp.h,
	  source/headers/geos/precision/GeometrySnapper.h:
	  Geometry snapping synced with JTS.

2006-12-18 Sandro Santilli <strk@refractions.net>

	* HOWTO_RELEASE: add ChangeLog's release mark step.
	* source/precision/GeometrySnapper.cpp (computeSnapTolerance):
	  properly compute snap tolerance for fixed precision geometries.
	* tests/xmltester/: Makefile.am, TestRobustOverlayFixed.xml:
	  new test for fixed precision snapping.

---------  GEOS-3.0.0rc3 release [2006-12-14] --------------------------

2006-12-13 Mateusz Loskot <mateusz@loskot.net>

	* build\msvc80\geos_lib\geos_lib.vcproj,source\Makefile.vc:
	  Updated makefile and project file for Visual C++.

2006-12-13 Sandro Santilli <strk@refractions.net>

	* precision::GeometrySnapper, precision::LineStringSnapper,
	  operation::overlay::FuzzyPointLocator,
	  operation::overlay::OffsetPointGenerator,
	  operation::overlay::OverlayValidator: